--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@next/third-parties": "^15.3.4",
+    "@types/dompurify": "^3.0.5",
+    "dompurify": "^3.2.6",
     "framer-motion": "^12.19.3",
     "next": "15.3.4",
     "next-seo": "^6.8.0",
