--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
+    "react-hot-toast": "^2.5.2",
     "react-syntax-highlighter": "^15.6.1",
     "resend": "^4.6.0",
     "zod": "^3.25.67"
