--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/third-parties": "^15.3.4",
     "@types/dompurify": "^3.0.5",
     "dompurify": "^3.2.6",
+    "express-rate-limit": "^7.5.1",
     "framer-motion": "^12.19.3",
     "next": "15.3.4",
     "next-seo": "^6.8.0",
@@ -22,7 +23,7 @@
     "react-hot-toast": "^2.5.2",
     "react-syntax-highlighter": "^15.6.1",
     "resend": "^4.6.0",
-    "zod": "^3.25.67"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
