--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:a11y": "jest --testPathPattern=a11y"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
@@ -23,15 +29,26 @@
     "react-hot-toast": "^2.5.2",
     "react-syntax-highlighter": "^15.6.1",
     "resend": "^4.6.0",
+    "web-vitals": "^3.5.2",
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@axe-core/react": "^4.9.0",
+    "@next/bundle-analyzer": "^15.3.5",
+    "@playwright/test": "^1.48.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-syntax-highlighter": "^15.5.13",
+    "axe-core": "^4.9.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "wait-on": "^7.2.0"
   }
 }
