Update email configuration, add lucide-react icons, and enhance section backgrounds.

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Email Configuration
 RESEND_API_KEY=your_resend_api_key_here
 FROM_EMAIL=onboarding@resend.dev
-TO_EMAIL=hello@neqo360.com
+TO_EMAIL=neqo360@gmail.com
 
 # Security Configuration
 NODE_ENV=development
