--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dompurify": "^3.2.6",
     "express-rate-limit": "^7.5.1",
     "framer-motion": "^12.19.3",
+    "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "next-seo": "^6.8.0",
     "react": "^19.0.0",
